Fix T78525: Status bar not reset after Edit Voxel Size

Reviewed By: sergey

Maniphest Tasks: T78525

Differential Revision: https://developer.blender.org/D8181